issue-83_improve-test-configuration_with_CI_CD

--- a/tox.ini
+++ b/tox.ini
@@ -1,35 +1,62 @@
-# this file is *not* meant to cover or endorse the use of tox or pytest or
-# testing in general,
-#
-#  It's meant to show the use of:
-#
-#  - check-manifest
-#     confirm items checked into vcs are in your sdist
-#  - python setup.py check (using the readme_renderer extension)
-#     confirms your long_description will render correctly on pypi
-#
-#  and also to help confirm pull requests to this project.
+# Tox configuration for lifelib
+# This file helps test the package across multiple Python versions locally
+# and ensures consistency with the CI/CD pipeline.
 
 [tox]
-envlist = py{26,27,33,34}
+envlist = py{37,38,39,310,311,312,313}, lint, coverage
+isolated_build = True
+skip_missing_interpreters = True
 
 [testenv]
-basepython =
-    py26: python2.6
-    py27: python2.7
-    py33: python3.3
-    py34: python3.4
+description = Run tests with pytest
 deps =
-    check-manifest
-    {py27,py33,py34}: readme_renderer
-    flake8
-    pytest
+    pytest>=7.0
+    pytest-cov>=4.0
+    pytest-xdist>=3.0
+    pandas
+    numpy>=1.16.5
+    openpyxl
 commands =
-    check-manifest --ignore tox.ini,tests*
-    # py26 doesn't have "setup.py check"
-    {py27,py33,py34}: python setup.py check -m -r -s
-    flake8 .
-    py.test tests
+    pytest {posargs:-v --cov=lifelib --cov-report=term-missing}
+
+[testenv:lint]
+description = Run linting and code quality checks
+skip_install = False
+deps =
+    flake8>=6.0
+    black>=23.0
+    isort>=5.0
+commands =
+    flake8 lifelib --count --select=E9,F63,F7,F82 --show-source --statistics
+    flake8 lifelib --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    black --check lifelib
+    isort --check-only lifelib
+
+[testenv:coverage]
+description = Generate coverage report
+deps =
+    pytest>=7.0
+    pytest-cov>=4.0
+    pandas
+    numpy>=1.16.5
+    openpyxl
+commands =
+    pytest --cov=lifelib --cov-report=html --cov-report=term --cov-report=xml
+
+[testenv:format]
+description = Auto-format code with black and isort
+skip_install = True
+deps =
+    black>=23.0
+    isort>=5.0
+commands =
+    black lifelib
+    isort lifelib
+
 [flake8]
-exclude = .tox,*.egg,build,data
+exclude = .tox,*.egg,build,data,dist,.git,__pycache__,.eggs
+max-line-length = 127
 select = E,W,F
+ignore = E203,E501,W503
+per-file-ignores =
+    __init__.py:F401
