--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,14 +23,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12', '3.13']
-        exclude:
-          # Exclude some combinations to reduce CI time if needed
-          # Remove these exclusions if you want full matrix coverage
-          - os: windows-latest
-            python-version: '3.7'
-          - os: macos-latest
-            python-version: '3.7'
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
 
     steps:
     - name: Checkout code
